# STSYS

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: rust.yml
example_models/: model_example_modal.cfg  model_example_static.cfg
src/: data_structs.rs  eigen.rs  elements.rs  lib.rs  main.rs  mat_math.rs  parser.rs  sprs_ops.rs  utils.rs  writer.rs
tests/: basic_tests.rs  fem_basic_tests.rs
tests/test_assets/: mat02.sprs  mat08.sprs
tests/test_models/: model_1.cfg  model_2.cfg
